fixed a little styling gap on top nav

--- a/css/layout.css
+++ b/css/layout.css
@@ -27,7 +27,7 @@ header {
     padding-left: unset;
     width: 100%;
     position: absolute;
-    top: 106%;
+    top: 105%;
     right: 0;
     overflow: hidden;
 }
